# word_classificator

./: .dockerignore  Dockerfile  README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml  mlflow.yml
conf/base/parameters/: data_preprocessing.yml  load_spacy_model.yml  text_extraction.yml  training.yml
data/03_primary/: lemma_word_counts_pdf.csv  lemma_word_counts_wikipedia.csv
data/04_feature/raw_samples/: negative_samples.csv  positive_samples.csv
docs/source/: conf.py  index.rst
extras/datasets/: document_count_dataset.py
src/: setup.py
src/model_server/: callbacks.py  flask_app.py
src/tests/: test_run.py
src/word_classificator/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/word_classificator/classifier_features/: README.md  features.py
src/word_classificator/model_server/: callbacks.py  flask_app.py
src/word_classificator/pipelines/data_preprocessing/: README.md  nodes.py  pipeline.py
src/word_classificator/pipelines/evaluation/: README.md  nodes.py  pipeline.py
src/word_classificator/pipelines/load_spacy_model/: README.md  __init__.py  nodes.py  pipeline.py
src/word_classificator/pipelines/prediction/: README.md  nodes.py  pipeline.py
src/word_classificator/pipelines/text_extraction/: README.md  __init__.py  nodes.py  pipeline.py
src/word_classificator/pipelines/training/: README.md  nodes.py  pipeline.py
